--- a/minijuegos-parejas.html
+++ b/minijuegos-parejas.html
@@ -16,15 +16,15 @@
                 <li class="dropdown">
                     <a href="#" class="dropbtn">Servicios</a>
                     <div class="dropdown-content">
-                        <a href="buscar_pareja.html">Buscar Pareja</a>
-                        <a href="mi_perfil.html">Mi Perfil</a>
-                        <a href="galeria_compartida.html">Galería Compartida</a>
+                        <a href="buscar-pareja.html">Buscar Pareja</a>
+                        <a href="mi-perfil.html">Mi Perfil</a>
+                        <a href="galeria-compartida.html">Galería Compartida</a>
                         <a href="chat.html">Chat</a>
-                        <a href="video_llamada.html">Videollamada</a>
-                        <a href="cartas_amor.html">Cartas de Amor</a>
-                        <a href="regalos_virtuales.html">Regalos Virtuales</a>
-                        <a href="mini_juegos.html">Mini Juegos</a>
-                        <a href="test_compatibilidad.html">Test de Compatibilidad</a>
+                        <a href="Videollamada.Html">Videollamada</a>
+                        <a href="cartas-amor.html">Cartas de Amor</a>
+                        <a href="regalos-virtuales.html">Regalos Virtuales</a>
+                        <a href="minijuegos-parejas.html">Mini Juegos</a>
+                        <a href="test-compatibilidad.html">Test de Compatibilidad</a>
                     </div>
                 </li>
                 <li><a href="configuracion.html">Configuración</a></li>
